# proglogcalc

./: .gitignore  README.md  package.yaml  proglogcalc.cabal  stack.yaml
doc/: Intro.tex  MAIN.tex  Precedences.tex
src/: CalcAlphabets.lhs  CalcPPrint.lhs  CalcPredicates.lhs  CalcRecogniser.lhs  CalcRun.lhs  CalcSimplify.lhs  CalcSteps.lhs  CalcSysTypes.lhs  CalcTypes.lhs  CalcZipper.lhs  DictAbstractions.lhs  NiceSymbols.lhs  PLCDemo.lhs  PrettyPrint.lhs  StdExpressions.lhs  StdLaws.lhs  StdPrecedences.lhs  StdPredicates.lhs  StdSets.lhs  StdUTPLaws.lhs  StdUTPPrecedences.lhs  StdUTPPredicates.lhs  Symbols.lhs
